# project-ghost

./: .clinerules  .gitignore  Dockerfile-dossi  README.md  docker-compose.yaml  vendor.js
.github/workflows/: ci.yaml  deploy.yaml  flux-bootstrap.yaml  terraform-destroy.yaml
ghost-cli/: Cargo.toml
ghost-cli/src/: api.rs  auth.rs  config.rs  main.rs
ghost-cli/src/commands/: extension.rs  logs.rs  mod.rs  openvpn.rs  status.rs  token.rs
k8s/: README.md
k8s/apps/: kustomization.yaml
k8s/base/: cert-manager.yaml  configmaps.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  secrets.yaml  storage.yaml
k8s/cert-manager/: certificates.yaml  issuers.yaml  kustomization.yaml
k8s/flux-system/: gotk-components.yaml  gotk-sync.yaml  image-automation.yaml  kustomization.yaml  notifications.yaml
libraries/subprocesses/: package.json  tsconfig.json
memory-bank/: README.md  activeContext.md  asterisk-rtt-bridge-implementation.md  asterisk-rtt-implementation.md  ios_push_notifications.md  productContext.md  progress.md  projectbrief.md  rtt-asterisk-ari-guide.md  sms_rewriting.md  systemPatterns.md  techContext.md  text_message_received.md
scripts/: extract_conversation.sh  init.sh
services/asterisk/: Dockerfile  docker-entrypoint.sh  extensions.lua  modules.conf
services/dossi/: .replrc.js  Dockerfile  package.json  tsconfig.json
services/ghost-api/: Dockerfile  package.json  tsconfig.json
services/ghoulbridge/: Dockerfile  dtmf_handler.py  logger.py  main.py  stasis_handler.py
services/nextjs/: Dockerfile  next.config.js  package.json
services/nginx/: Dockerfile  docker-entrypoint.sh
services/openvpn/: Dockerfile  entrypoint.sh  generate-client-config.sh  server.conf  status-server.py
services/prosody/: Dockerfile  docker-entrypoint.sh
services/puppeteer/: package.json
services/rtt/: Dockerfile  package.json
services/rtt-bridge/: Dockerfile  agi_server.py  agi_session.py  asterisk_ami.py  aws_client.py  baudot.py  logger.py  main.py  rtt_handler.py  stasis_handler.py  tty_session_manager.py
services/sms_pipeline/: Dockerfile  package.json
services/synapse/: Dockerfile  docker-entrypoint.sh
terraform/: README.md  dns.tf  main.tf  outputs.tf  tcp-proxy.tf  terraform.tfvars.example  variables.tf
(+182 files in other folders)
