[package]
name = "ghost-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing Ghost telephony system"
authors = ["Ghost Team"]
license = "MIT"

[[bin]]
name = "ghost"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto for session encryption
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.21"

# Terminal formatting
colored = "2.1"
tabled = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Config file support
dirs = "5.0"
toml = "0.8"
whoami = "1.5"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Async streaming
futures-util = "0.3"

# Password input
rpassword = "7.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
